--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -10838,6 +10838,10 @@ p:last-child {
   margin-bottom: 0;
 }
 
+img-comparison-slider {
+  visibility: hidden;
+}
+
 :root {
   --main-x-pad: .8rem;
 }
@@ -12170,6 +12174,38 @@ a.upload-bar {
 
 .filter__param {
   border-bottom: 1px solid #424242;
+}
+
+/*
+  Image compare slider: https://sneas.github.io/img-comparison-slider/
+*/
+img-comparison-slider {
+  background-color: #333333;
+  --divider-width: 3px;
+  --divider-color: rgba(226, 226, 226, 0.7);
+  --handle-size: 60px;
+}
+@media (min-width: 768px) {
+  img-comparison-slider {
+    --handle-size: 80px;
+  }
+}
+
+img-comparison-slider:focus-visible {
+  color: #e2e2e2;
+  background-color: #424242;
+  border-color: #424242;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
+}
+
+.img-comparison-slider__handle {
+  width: var(--handle-size);
+  height: var(--handle-size);
+  background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512"%3e %3cdefs%3e %3cfilter id="custom-arrows-a"%3e %3cfeColorMatrix in="SourceGraphic" values="0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 1.000000 0"/%3e %3c/filter%3e %3c/defs%3e %3cg fill="%23e2e2e2" fill-rule="evenodd" filter="url%28%23custom-arrows-a%29"%3e %3cpath fill="%23000" fill-rule="nonzero" d="M11.44 225.39L336.56 225.39C340.706504 225.38742 344.485424 223.011082 346.284179 219.275044 348.082933 215.539006 347.583887 211.102996 345 207.86L182.44 4.06C180.39264 1.49344455 177.288122-.00133928631 174.005-.00133928631 170.721878-.00133928631 167.61736 1.49344455 165.57 4.06L3 207.86C.416112605 211.102996-.0829331302 215.539006 1.7158212 219.275044 3.51457553 223.011082 7.29349632 225.38742 11.44 225.39zM336.56 286.61L11.44 286.61C7.29349632 286.61258 3.51457553 288.988918 1.7158212 292.724956-.0829331302 296.460994.416112605 300.897004 3 304.14L165.56 507.94C167.60736 510.506555 170.711878 512.001339 173.995 512.001339 177.278122 512.001339 180.38264 510.506555 182.43 507.94L345 304.14C347.582769 300.898415 348.0826 296.464701 346.286357 292.729453 344.490113 288.994205 340.714699 286.616413 336.57 286.61L336.56 286.61z" transform="rotate%28-90 215 215%29"/%3e %3c/g%3e%3c/svg%3e');
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 /*
