--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -199,6 +199,8 @@ $header-search-slot-gap: 1em;
   Search
 */
 
+$search-input-x-pad: $input-padding-x-lg;
+
 .search {
   text-align: right;
 
@@ -299,7 +301,7 @@ $header-search-slot-gap: 1em;
   padding-right: calc(3rem + 0.2em);
 
   @include media-breakpoint-up(sm) {
-    padding-left: $input-padding-x-lg;
+    padding-left: $search-input-x-pad;
   }
 }
 
@@ -320,12 +322,16 @@ $header-search-slot-gap: 1em;
 }
 
 .search__suggest,
+.search__suggest::after,
+.search__suggest-content {
+  border-bottom-left-radius: $input-border-radius-lg;
+  border-bottom-right-radius: $input-border-radius-lg;
+}
+.search__suggest,
 .search__suggest::after {
   position: absolute;
   left: 0;
   right: 0;
-  border-bottom-left-radius: $input-border-radius-lg;
-  border-bottom-right-radius: $input-border-radius-lg;
 }
 .search__suggest {
   display: none;
@@ -336,7 +342,7 @@ $header-search-slot-gap: 1em;
   background-color: $input-focus-bg;
 }
 .search__suggest-content {
-  max-height: 200px;
+  max-height: 250px;
 }
 .is-suggesting .search__suggest {
   display: block;
@@ -360,9 +366,11 @@ $header-search-slot-gap: 1em;
 }
 .search__suggest-item {
   border-color: $contrast1;
-  padding-left: $input-padding-x-lg;
-  padding-right: $input-padding-x-lg;
+  padding-left: $search-input-x-pad;
+  padding-right: .5em;
   background-color: transparent;
+  display: flex;
+  align-items: start;
 }
 
 .search__suggest-item:hover,
@@ -374,6 +382,15 @@ $header-search-slot-gap: 1em;
 .search__suggest-item:focus-visible {
   outline: 0;
   box-shadow: $input-btn-focus-box-shadow;
+}
+
+.search__suggest-item-thumb {
+  margin-right: .6em;
+  margin-top: calc(#{-$list-group-item-padding-y} + 4px);
+  margin-bottom: calc(#{-$list-group-item-padding-y} + 4px);
+}
+.search__suggest-item-thumb-txt {
+  align-self: center;
 }
 
 /*
