--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -469,6 +469,7 @@ $sidebar-animation-duration: 0.2s;
     padding: 1rem 0.5rem;
     text-align: right;
     min-height: $header-height;
+    flex-shrink: 0;
     @include media-breakpoint-up(md) {
         min-height: 0;
         padding-top: 0;
