--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -802,7 +802,7 @@ $selected-toolbar-transition-duration: .2s;
 $image-view-sidebar-width: 400px;
 
 .image-view {
-  height: 100%;
+  height: 100vh;//100%;
   display: flex;
   position: relative;
   overflow: hidden;
