--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -89,9 +89,12 @@ input[type='time'] {
   Definition list
 */
 .dlist,
-.dlist > dt,
+
 .dlist > dd {
-  margin: 0;
+  margin: 0 ;
+}
+.dlist > dt{
+    margin: 0 0.25rem 0 0;
 }
 
 .dlist_0 > dt,
