aded photo restore from trash functionality

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1397,6 +1397,11 @@ img-comparison-slider:focus-visible {
         left: 1rem;
         z-index: 2;
       }
+    @include media-breakpoint-up(md) {
+        bottom: 1rem;
+        left: 1rem;
+        z-index: 2;
+    }
     @include media-breakpoint-down(sm) {
         bottom: calc(#{$image-view-picture-nav-size} + 15px * 2);
         left: 1rem;
