working on own slider implemention

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,5 +1,5 @@
 @import 'customised-bootstrap';
-@import 'node_modules/img-comparison-slider/dist/collection/styles/initial';
+//@import 'node_modules/img-comparison-slider/dist/collection/styles/initial';
 
 :root {
   --main-x-pad: .8rem;
